[package]
name = "headers-client-ip"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["headers", "xrealip", "axum", "typedheader", "typed"]
repository = "https://github.com/dimitrmo/headers-client-ip"
description = "A header for X-Real-IP compatible with headers crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headers = "0.3"
lazy_static = "1.4"
